# Projects_Marlyn

./: README.md
BNN/: README.md
BNN/Demo/: BNN_MNIST_Testbench.ipynb  bnn.bit
BNN/bnn_project/hls/: Makefile  bnn.h  golden.h  run_csim.tcl
BNN/bnn_project/hls/bnn/: hls.app
BNN/bnn_project/python/: bnn_mnist.py
BNN/bnn_project/python/weights/: layer3.txt
Demo/: bnn.hwh
SMT32/: README.md  STM32.MOV  leds.c  leds.h  main.c  timer.c  timer.h
bnn_project/hls/: bnn.cpp  bnn_test.cpp
bnn_project/hls/bnn/solution1/: solution1.aps  solution1.directive  solution1_data.json
bnn_project/hls/bnn/solution1/.autopilot/: .automg_exit  .autopilot_exit
bnn_project/hls/bnn/solution1/.autopilot/db/: .message_csim.xml  .message_impl.xml  .message_syn.xml  Block_entry_gmem_rd_proc.adb  Block_entry_gmem_rd_proc.compgen.tcl  Block_entry_gmem_rd_proc.verbose.rpt  Block_entry_gmem_rd_proc.verbose.sched.rpt  Block_entry_gmem_rd_proc.verbose.sched.rpt.xml  Block_entry_gmem_wr_proc.adb.xml  Block_entry_gmem_wr_proc.bind.adb  Block_entry_gmem_wr_proc.bind.adb.xml  Block_entry_gmem_wr_proc.sched.adb.xml  Block_entry_gmem_wr_proc.tbgen.tcl  Block_entry_gmem_wr_proc.verbose.rpt.xml  Block_entry_gmem_wr_proc.verbose.sched.rpt.xml  a.g  a.g.2.bc  a.g.ld.0.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.bc  a.o.3.bc  all.directive.json  apatb_bnn.cpp  apatb_bnn_ir.ll  autopilot.rtl.models.tcl  autopilot.rtl.models.txt  (+133 more)
bnn_project/hls/bnn/solution1/.autopilot/db/driver/src/: CMakeLists.txt  Makefile  xbnn.c  xbnn_hw.h  xbnn_sinit.c
bnn_project/python/weights/: layer1.txt  layer2.txt
(+455 files in other folders)
